# mechdriver

./: .gitignore  .pylintrc  :q  LICENSE  README.md  a.py  ch3oh.xyz  ch3oh.zmat  core.129950  environment.yml  h2o.ene  h2o.xyz  h2o.zmat  lint.sh  meta.yaml  mol.xyz  out  pyproject.toml  recipe.yaml  script.py  script1.py  script2.py  setup.py
.circleci/: config.yml
.obj/: mol.py
.recipe/: recipe.yaml
autofile/: .test_.py.swp  __init__.py  _fs.py  fs.py  test_.py
automech/: __init__.py  _query.py  cli.py
datalibs/: __init__.py  eleclvl.py  out  phycon.py  script  substr.py  symm.py
dlibs/: __init__.py  eleclvl.py  sigmarad.py
docs/: conf.py  environment.yaml  index.rst  log  requirements.txt  struct.rst
drivers/: .ktpdriver.py.swp  __init__.py  esdriver.py  etransdriver.py  ktpdriver.py  printdriver.py  procdriver.py  sortdriver.py  thermodriver.py  transdriver.py
esdriver/: .driver.py.swp  __init__.py  driver.py
estoktpdriver/: .driver.py.swp  .test.log.swp  .test3.log.swp  driver.py  rates.ckin  read_dat.py  run.py
examples/: .gitignore  gridopt.py  input.py  input_tmp.py  mol_input.py  multi.py  single.py
install/: fake-install.sh
ktpdriver/: __init__.py  arrfit.out  atry.py  darrfit.out  driver.py
lib/: __init__.py  path.py  pathtools.py  printmsg.py  submission.py
mechlib/: __init__.py  pathtools.py
mechroutines/: __init__.py
moldr/: .conformer.py.swp  .geom.py.swp  .pf.py.swp  .scan.py.swp  .util.py.swp  __init__.py  conformer.py  driver.py  driver_523.py  driver_old.py  driver_sjk.py  driver_tmp.py  geom.py  irc.py  optsmat.py  (+14 more)
(+2208 files in other folders)
